# ModelArena

./: .gitignore  BACKBOARD-NOTES.md  DEMO-CHECKLIST.md  PROJECT-DETAILS.md  PROJECT-PLAN.md  README.md  pyproject.toml  requirements.txt
src/ai_arena/: __init__.py  cli.py  config.py
src/ai_arena/engine/: __init__.py  generate.py  reducer.py  rules.py  types.py
src/ai_arena/orchestrator/: __init__.py  backboard_client.py  prompts.py  routing.py  runner.py  tools.py
src/ai_arena/rag/: __init__.py  index.py
src/ai_arena/rag/corpus/: rules.md  strategy.md
src/ai_arena/storage/: __init__.py  db.py  logger.py  replay.py  schema.py
src/ai_arena/ui/: __init__.py  pygame_app.py  render.py
tests/: test_engine.py
