[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-arena"
version = "0.1.0"
description = "Multi-agent competitive LLM reasoning using Backboard API"
authors = [{name = "AI Arena Team"}]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pygame>=2.5.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
ai-arena = "ai_arena.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]